crates/vize_atelier_dom/tests/snapshots/dom_snapshot__v_show__simple_v_show.snap
---
source: crates/vize_atelier_dom/tests/dom_snapshot.rs
expression: "get_compiled(r#\"<div v-show=\"visible\">content</div>\"#)"
---
const { withDirectives: _withDirectives, openBlock: _openBlock, createElementBlock: _createElementBlock, vShow: _vShow } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return _withDirectives((_openBlock(), _createElementBlock("div", null, "content", 512 /* NEED_PATCH */)), [
    [_vShow, visible]
  ])
}
