crates/vize_atelier_dom/tests/snapshots/dom_snapshot__v_show__v_show_on_child_component.snap
---
source: crates/vize_atelier_dom/tests/dom_snapshot.rs
expression: "get_compiled(r#\"<div><MyComponent v-show=\"visible\" /></div>\"#)"
---
const { resolveComponent: _resolveComponent, withDirectives: _withDirectives, createVNode: _createVNode, openBlock: _openBlock, createElementBlock: _createElementBlock, vShow: _vShow } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_MyComponent = _resolveComponent("MyComponent")
  
  return (_openBlock(), _createElementBlock("div", null, [
    _withDirectives(_createVNode(_component_MyComponent, null, null, 512 /* NEED_PATCH */), [
      [_vShow, visible]
    ])
  ]))
}
