crates/vize_atelier_dom/tests/snapshots/dom_snapshot__v_show__v_show_on_root_component.snap
---
source: crates/vize_atelier_dom/tests/dom_snapshot.rs
expression: "get_compiled(r#\"<MyComponent v-show=\"visible\" />\"#)"
---
const { resolveComponent: _resolveComponent, withDirectives: _withDirectives, openBlock: _openBlock, createBlock: _createBlock, vShow: _vShow } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_MyComponent = _resolveComponent("MyComponent")
  
  return _withDirectives((_openBlock(), _createBlock(_component_MyComponent, null, null, 512 /* NEED_PATCH */)), [
    [_vShow, visible]
  ])
}
